# cpp-examples

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  dependencies.cmake  raii.cc  sonar-project.properties  tox.ini
.github/workflows/: build.yml  ccpp.yml
build2/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  compile_commands.json  raii
build2/cjunk/: CTestTestfile.cmake  cmake_install.cmake
build2/cjunk/practice/: CTestTestfile.cmake  chainablePromise  cmake_install.cmake
build2/cjunk/swradio/: CTestTestfile.cmake  cmake_install.cmake
build2/cjunk/trivialJson/: CTestTestfile.cmake  cmake_install.cmake  jsonTests
cjunk/: .gitignore  CMakeLists.txt  Untitled.ipynb  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  include.cmake  main.cpp  parser.cpp  ringBuffer.cpp  ringBuffer.h  tests.cpp
cjunk/benchmarks/: main.cpp
cjunk/cython/: RealTimeTradeStudy.ipynb  simple.c  simple.cpp  simple.pyx
cjunk/cython/.ipynb_checkpoints/: RealTimeTradeStudy-checkpoint.ipynb
cjunk/glFrontEnd/: CMakeLists.txt  Window.cpp  Window.h
cjunk/pocoJunk/: CMakeLists.txt  main.cpp
cjunk/practice/: .networkframeStream.cpp.swp  .skelMVCApp.py.swp  .webServiceTornado.py.swp  CMakeLists.txt  IOT-comments.py  ImageNeuralNetwork.cpp  Makefile  Readme.md  UDPServer2.cc  UDPSocketServer.cc  actorReturningVoid.cc  antColonyOptimization.cc  asyncStdin.cc  asyncio.cc  beastWebsocketServer.cpp  chainablePromise  chainablePromise.cc  chainablePromise_v4  circularqueue.cc  extendedKalanFilterBroken.cc  financialAnalysis.cc  functional.cc  geoParticleFilter.cc  index.jinja  isatty  isatty.cc  json-node.hpp  json-node2.hpp  kalmanFilter.cc  motorcontrol.hpp  motorcontrol.py  networkframeStream.cpp  perceptron.cc  queue.h  quicServer.cpp  sendFile  sendFile.cc  smallString.cc  stupidLogCmakeHelpers  test_tornadoService.py  (+5 more)
cjunk/practice/egl/: Makefile  egl_test.cpp
cjunk/practice/test/: CMakeLists.txt
cjunk/pythonTest/: file.json  requirements.txt  test.py
cjunk/swradio/: CMakeLists.txt  radio.cpp
cjunk/trivialJson/: .SmallMemoryModel.cpp.swp  CMakeLists.txt  Makefile  SmallMemoryModel.cpp  \  cmake_install.cmake  ctests.cpp  fromsimd.cpp  json.cpp  json.hpp
cjunk/trivialJson/tests/: benchmark.cpp  main.cpp
cmake/: catch.cmake  dependencies.cmake  lint.cmake  package.cpack  pmm.cmake  time2trace.py
devops/: docker-compose.yaml  readme.md
example_streambuffer/: CMakeLists.txt  gnustream.cpp  rot13echo.py  testHello.cpp
gitlab-ci/: registar-runner.sh  start-runner.sh
meta-vsi/: kas-build-py4.yml  project-pi.yml
middleware/: CMakeLists.txt  README.md  main.cpp
middleware/src/: dump_serial.cpp  fft.cpp  first.cpp  first.h  nonworking_json.cpp  stupid_fft.cpp  stupid_fft.h
serialization/introspect/: README.md
serialization/introspect/example/: Makefile  example.fbs  main.cc
